# aiagentapis

./: .gitignore  API_DOCUMENTATION.md  README.md  api_status_report.md  app.py  config.py  demo_with_text.py  dependencies.txt  deployment_guide.md  main.py  pyproject.toml  requirements.txt  test_api.py  test_specific_pdf.py
.github/workflows/: main_openaiagents.yml
attached_assets/: Pasted-Build-a-Python-based-application-server-that-demonstrates-the-core-capabilities-of-OpenAI-APIs-by-op-1749474949275_1749474949276.txt
middleware/: auth.py
routes/: ai_endpoints.py
services/: azure_storage.py  file_processor.py  openai_service.py
utils/: helpers.py
